Bugfix: prevent group_images from overflowing on small pages

--- a/sites/all/themes/mcneese/css/screen/screen-flow.css
+++ b/sites/all/themes/mcneese/css/screen/screen-flow.css
@@ -648,3 +648,11 @@
   color: #f7ff00;
   background-color: #2970a0;
 }
+
+
+
+/*** Group Image ***/
+#mcneese-page-content > .group_image {
+  max-width: 100%;
+  overflow: hidden;
+}
